<resources>
    <string name="app_name">BuildBody</string>
    <string name="nameRegister">Név</string>
    <string name="emailRegister">Email</string>
    <string name="passwordRegister">Jelszó</string>
    <string name="femaleRegister">Nő</string>
    <string name="maleRegister">Férfi</string>
    <string name="lowRegister">Könnyű</string>
    <string name="mediumRegister">Közepes</string>
    <string name="highRegister">Nehéz</string>
    <string name="ageRegister">Életkor</string>
    <string name="weightRegister">Súly</string>
    <string name="heightRegister">Magasság</string>
    <string name="applyRegister">Regisztráció</string>
    <string name="cancelRegister">Mégsem</string>
    <string name="loginButton">Bejelentkezés</string>
    <string name="registrationButton">Regisztráció</string>
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Jelszó</string>
    <string name="pref_acces_token">Preference_acces_token</string>
    <string name="nameEmpty">A név nem lehet üres!</string>
    <string name="emailEmpty">Az email nem lehet üres!</string>
    <string name="emailFault">Nem jó email formátum!</string>
    <string name="passwordEmpty">A jelszó nem lehet üres!</string>
    <string name="ageEmpty">Az életkor nem lehet üres!</string>
    <string name="ageFault">Az életkort nem egész számban adta meg!</string>
    <string name="weightEmpty">A súly nem lehet üres!</string>
    <string name="weightFault">A súlyt nem egész számban adta meg!</string>
    <string name="heightEmpty">A magasság nem lehet üres!</string>
    <string name="heightFault">A masasságot nem egész számban adta meg!</string>
    <string name="myTrainingPlan">Saját Edzéstervek</string>
    <string name="trainings">Edzések</string>
    <string name="calorie">Calorie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addMyTrainingPlan">Hozzáadás</string>
    <string name="myAddMyTrainingPlan">Eltávolítás</string>
    <string name="add">Edzés hozzáadva!</string>
    <string name="readyAdd">Ezt az edzés már felvette!</string>
    <string name="removeTraining">Edzés eltávolítva</string>
    <string name="singout">Kijelentkezés</string>
</resources>
