<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameRegisterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameRegisterTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameRegister"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailRegisterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRegisterTextInputLayout"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailRegisterTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emailRegister"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordRegisterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailRegisterTextInputLayout"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordRegisterTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordRegister"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nem"
        app:layout_constraintStart_toStartOf="@+id/passwordRegisterTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterTextInputLayout"
        android:textColor="@color/white"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/maleCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maleRegister"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/femaleCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/femaleRegister"
        app:layout_constraintStart_toEndOf="@+id/maleCheckbox"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aktivitási Szint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/femaleCheckbox"
        android:textColor="@color/white"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/lowCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowRegister"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/mediumCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediumRegister"
        app:layout_constraintStart_toEndOf="@+id/lowCheckbox"
        app:layout_constraintTop_toTopOf="@+id/lowCheckbox"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/highCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highRegister"
        app:layout_constraintStart_toEndOf="@+id/mediumCheckbox"
        app:layout_constraintTop_toTopOf="@+id/lowCheckbox"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="18dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ageRegisterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowCheckbox"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ageRegisterTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ageRegister"
            android:inputType="numberDecimal"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/weightRegisterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageRegisterTextInputLayout"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/weightRegisterTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weightRegister"
            android:inputType="numberDecimal"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/heightRegisterTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightRegisterTextInputLayout"
        android:textColorHint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/heightRegisterTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/heightRegister"
            android:inputType="numberDecimal"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/applyRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightRegisterTextInputLayout" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/applyButton"
        app:layout_constraintTop_toBottomOf="@+id/heightRegisterTextInputLayout" />
</android.support.constraint.ConstraintLayout>