<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLoginTextInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordLoginTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLoginTextInputLayout"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailLoginTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emailLogin" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLoginTextInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordLoginTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordLogin"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/passwordLoginTextInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordLoginTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginTextInputLayout" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/registrationButton"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginTextInputLayout"/>
</android.support.constraint.ConstraintLayout>